# python-ngsi-ld-client

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  README.md  full_api.json  generate-code.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: AdminStatus.md  AdminStatusAllOf.md  AdminStatusOptions.md  AppendAttrsTemporalRequest.md  Attribute.md  AttributeList.md  BatchEntityError.md  BatchOperationResult.md  BatchOperationsApi.md  CSourceRegistrationsApi.md  CSourceSubscriptionsApi.md  ContextInformationApi.md  ContextInformationConsumptionApi.md  ContextInformationProvisionApi.md  ContextInformationSubscriptionApi.md  ContextSourceDiscoveryApi.md  ContextSourceRegistration.md  ContextSourceRegistrationApi.md  ContextSourceRegistrationFragment.md  ContextSourceRegistrationList.md  ContextSourceRegistrationSubscriptionApi.md  ContextSourcesApi.md  ContextSubscriptionApi.md  Coordinates.md  CreateBatch201Response.md  CreateBatchRequest.md  CreateCSRRequest.md  CreateCSRRequest1.md  CreateEntityRequest.md  CreateSubscriptionRequest.md  CreateSubscriptionRequest1.md  CreatedAt.md  CsourceNotification.md  CsourceRegistration.md  CsourceRegistrationFragment.md  CsourceRegistrationFragmentScope.md  CsourceRegistrationInput.md  CsourceRegistrationOutput.md  CsourceRegistrationOutputAllOf.md  CsourceRegistrationScope.md  (+230 more)
ngsi_ld_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
schemas/: ietf-interfaces@2018-02-20.yaml  ngsi-ld-api.yaml
test/: prueba.py  test_admin_status.py  (+275 more)
(+369 files in other folders)
